K8s/easytemplatecore-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: easytemplatecore-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: easytemplatecore
  template:
    metadata:
      labels:
        app: easytemplatecore
    spec:
      containers:
        - name: easytemplatecore
          image: mohsen01/easytemplatecore:latest
---
kind: Service
apiVersion: v1
metadata:
  name: easytemplatecore-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: easytemplatecore
  ports:
  - name: easytemplatecore
    protocol: TCP
    port: 80
    targetPort: 80
  - name: easytemplatecoregrpc
    protocol: TCP
    port: 8000
    targetPort: 8000
