K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: "etc.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easytemplatecore-clusterip-srv
                port:
                  number: 80
    - host: "www.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lateralapp-clusterip-srv
                port:
                  number: 80
